<resources>
    <string name="app_name">MainActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_search">searchActivity</string>
    <string name="forget_password">Forget Password</string>
    <string-array name="faculty_list">
        <item>Please select your faculty (optional)</item>
        <item>Architecture, Building and Planning</item>
        <item>Arts</item>
        <item>Education</item>
        <item>Engineering and Information Technology</item>
        <item>Fine Arts and Music</item>
        <item>Law</item>
        <item>Medicine, Dentistry and Health Sciences</item>
        <item>Science</item>
    </string-array>

    <string-array name="degree_list">
        <item>Please select your degree (optional)</item>
        <item>Certificate I</item>
        <item>Certificate II</item>
        <item>Certificate III</item>
        <item>Certificate IV</item>
        <item>Diploma</item>
        <item>Advanced Diploma, Associate Degree</item>
        <item>Bachelor Degree</item>
        <item>Bachelor Honours Degree</item>
        <item>Masters Degree</item>
        <item>Doctoral Degree</item>
    </string-array>

    <!-- Login strings-->
    <string name="login">Login</string>
    <string name="login_email_or_username">Email or username</string>

    <!-- Sign up strings-->
    <string name="Sign_Up">Sign Up</string>
    <string name="UniNook">UniNook</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
>>>>>>> 4e36971410adedb91bc0ec8878d4eaafc0517de8
</resources>