<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/UniNook"
            app:srcCompat="@drawable/logo_uninook" />


        <TextView
            android:id="@+id/logoText"
            style="@style/TextHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UniNook"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/pageTitle"
            style="@style/TextSubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sign_Up"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editName"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:hint="@string/Name" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextUsername"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:hint="@string/Username" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_Password"
            android:inputType="textPassword" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="OTP"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/buttonGetOTP"
            style="@style/Button.Primary.Small"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Get OTP" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSignUp"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Sign Up" />

</LinearLayout>
